# singluarity-rs

./: .gitignore  AGENTS.md  Cargo.toml  README.md  Trunk.toml  skills-lock.json
.cargo/: config.toml
assets/shaders/: black_hole.wgsl  blur.wgsl  brightpass.wgsl  composite.wgsl  disk.wgsl  geodesic_schwarzschild.wgsl  grid.wgsl  planets.wgsl  ray_gen.wgsl  skybox.wgsl  stars.wgsl  upscale.wgsl
docs/superpowers/plans/: 2026-07-09-interstellar-blackhole-phase1.md  2026-07-13-interstellar-blackhole-phase2-kerr.md  2026-07-14-blackhole-cinematic-rendering.md  2026-07-15-volumetric-disk.md  2026-07-16-kerr-orbiting-planets.md  2026-07-17-ui-panel-redesign.md
docs/superpowers/specs/: 2026-07-09-interstellar-blackhole-design.md  2026-07-13-interstellar-blackhole-phase2-kerr-design.md  2026-07-14-blackhole-cinematic-rendering-design.md  2026-07-15-volumetric-disk-design.md  2026-07-16-kerr-orbiting-planets-design.md  2026-07-17-ui-panel-redesign-design.md
src/: camera.rs  lib.rs  main.rs  params.rs  physics.rs  ui.rs  web.rs
src/render/: material.rs  mod.rs  plugin.rs
src/scene/: planets.rs
src/ui/: mod.rs  preset.rs  sections.rs  style.rs
tests/: physics_test.rs  preset_test.rs
web/: index.html
